feat: 支持rpc调用sms接口

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ SECRET_ID=AKIDxmdMtFRhuxulT8yjItFRQCoMhogPxOgn
 SECRET_KEY=0sBIG5g6KK5f2MVZSCoPtHfu0ynSxMdj
 SDK_APP_ID=1400746566
 SIGN_NAME=米弥特
+ACTIVITY_ENROLLMENT_TEMPLATE_ID=1732169
+ACTIVITY_CANCELLATION_TEMPLATED_ID=1732183
